--- a/tweetset/collect/templates/collect/index.html
+++ b/tweetset/collect/templates/collect/index.html
@@ -10,9 +10,10 @@
     <h1 class="text-center" style="padding-bottom:10px;">Build your dataset of Tweets!</h1>
     <p class="lead text-center">TweetSet is a web application that was created to simplify collecting Tweets into corpora and datasets. You can collect Tweets based on keywords, user ids, and geographic locations. You can then download your corpora in several different formats that you can use in your research or work.</p>
     {% if user.is_authenticated %}<a href="{% url 'dashboard' %}" class="btn btn-lg btn-success">Go to dashboard</a>{% else %}<a href="{% url "social:begin" backend="twitter" %}" class="btn btn-lg btn-success"><i class="fa fa-twitter"></i> Log in with Twitter</a>{% endif %}
-    <p style="margin-top:20px;padding-bottom:10px;">TweetSet was made by <a href="http://janez.me">Janez Kranjc</a></p>
-    <script data-gratipay-username="janezkranjc"
-        src="//grtp.co/v1.js"></script>
+    <p style="margin-top:20px;padding-bottom:10px;">This project is mantained by <a href="http://mikexine.com/">Michele</a>; you can access its source code on <a href="https://github.com/mikexine/tweetset">Github</a>.</p>
+
+    <p>Forked from TweetSet, which was made by <a href="http://janez.me">Janez Kranjc</a> - <a href="https://github.com/janezkranjc/tweetset">Github Link</a></p>
+    
     </div>
     <div class="col-sm-4 col-sm-offset-1" style="padding-top:20px;">
     <img src="{{STATIC_URL}}img/diagram.png" class="img-responsive" alt="TweetSet">
