--- a/tweetset/collect/templates/collect/tweets.html
+++ b/tweetset/collect/templates/collect/tweets.html
@@ -55,10 +55,10 @@
             {% for tweet in tweets %}
             <tr>
             <td><img src="{{tweet.data.user.profile_image_url}}" class="img-thumbnail"></td>
-            <td>{{tweet.data.user.screen_name}}</td>
+            <td><a href="https://twitter.com/{{tweet.data.user.screen_name}}"" target="_blank">{{tweet.data.user.screen_name}}</a></td>
             <td>{{tweet.data.text}}</td>
             <td>{{tweet.parse_datetime}}</td>
-            <td>{{tweet.twitter_id}}</td>
+            <td><a href="https://twitter.com/statuses/{{tweet.twitter_id}}"" target="_blank">{{tweet.twitter_id}}</a></td>
             </tr>
             {% endfor %}
       </tbody>
