--- a/tweetset/collect/templates/collect/contacts.html
+++ b/tweetset/collect/templates/collect/contacts.html
@@ -7,8 +7,10 @@
   <div class="row" style="margin-bottom:30px; margin-top:30px;">
     <div class="col-sm-6 text-center">
     <img src="{{STATIC_URL}}img/tweetset.png" class="img-responsive" alt="TweetSet">
-    <h1 class="text-center" style="padding-bottom:10px;">Build your dataset of Tweets!</h1>
-    <p class="lead text-center">TweetSet is a web application that was created to simplify collecting Tweets into corpora and datasets. You can collect Tweets based on keywords, user ids, and geographic locations. You can then download your corpora in several different formats that you can use in your research or work.</p>
+    <br />
+    <h1 class="text-center" style="padding-bottom:10px;">Issues? Write!</h1>
+    <br />
+    <p class="lead text-center">Just shoot me an email at <a href="mailto:mikexine@gmail.com">mikexine@gmail.com</a> or a Telegram message at <a href="https://telegram.me/mikexine">@mikexine</a>.</p>
     {% if user.is_authenticated %}<a href="{% url 'dashboard' %}" class="btn btn-lg btn-success">Go to dashboard</a>{% else %}<a href="{% url "social:begin" backend="twitter" %}" class="btn btn-lg btn-success"><i class="fa fa-twitter"></i> Log in with Twitter</a>{% endif %}
 
     
