--- a/tweetset/collect/static/css/rewrite.css
+++ b/tweetset/collect/static/css/rewrite.css
@@ -37,3 +37,31 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+
+
+.wrap {
+    width: auto;
+    height: 250px;
+    padding: 0;
+    overflow: hidden;
+}
+.frame {
+    width: 1280px;
+    height: 786px;
+    -ms-transform: scale(0.60);
+    -moz-transform:  scale(0.60);
+    -o-transform: scale(0.60);
+    -webkit-transform:  scale(0.60);
+    transform:  scale(0.60);
+    
+    -ms-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    scrolling: no;
+    border: 0px none; 
+    margin-left: -160px; 
+    margin-top: -20px;
+}
