--- a/tweetset/collect/templates/collect/dashboard.html
+++ b/tweetset/collect/templates/collect/dashboard.html
@@ -43,7 +43,21 @@
                     <li><a href="{% url 'download json' collection_id=collection.pk %}">JSON</a></li>
                     <li><a href="{% url 'download csv' collection_id=collection.pk %}">CSV</a></li>
                   </ul>
-                </div>                
+                </div>   
+                &nbsp;
+                &nbsp;
+                <a href="{% url 'make_stats' collection_id=collection.pk %}" class="btn btn-warning btn-xs ts-loading" data-loading-text="Launching..">Make Stats!</a>   
+                <div class="btn-group">
+                  <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
+                    Stats <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="{% url 'map' collection_id=collection.pk %}">Map</a></li>
+                    <li><a href="{% url 'time_chart' collection_id=collection.pk %}">Time Chart</a></li>
+                    <li><a href="{% url 'frequencies' collection_id=collection.pk %}">Frequencies</a></li>
+                  </ul>
+                </div> 
+
             </td>
           </tr>  
             {% endfor %}
