--- a/tweetset/collect/templates/collect/base.html
+++ b/tweetset/collect/templates/collect/base.html
@@ -40,10 +40,7 @@
 
 
 <link href="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" rel="stylesheet">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script> <!--
-        <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
-        <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
-        -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script> 
     <script src="http://leaflet.github.io/Leaflet.heat/dist/leaflet-heat.js"></script>
 
  
